feat: design created with html and css

--- a/index.html
+++ b/index.html
@@ -4,22 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container">
         <header>
             <h1>To-Do List</h1>
         </header>
-
         <main>
 
-        </main>
+            <p>Add new task</p>
+            <form action="task-form">
+                <input type="text" id="task-add" required>
+                <button type="submit" class="add-task">Add</button>
+            </form>
 
-        <footer>
-            
-        </footer>
+            <table>
+                <caption>Tasks</caption>
+                <thead>
+                <tr>
+                    <th class="checkbox-column"></th>
+                    <th class="task-column">Tasks</th>
+                    <th class="action-column">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="checkbox-column"><input type="checkbox"></td>
+                    <td class="task-column">Task 1</td>
+                    <td class="action-column">
+                        <button class="edit-task">Edit</button>
+                        <button class="delete-task">Delete</button>
+                    </td>
+                </tr>
+                </tbody>
+             </table>
+        </main>
     </div>
-    
 </body>
 </html>
